--- a/feauturetasks.html
+++ b/feauturetasks.html
@@ -152,48 +152,83 @@
         "الجمعة",
       ];
 
+      // Default date for new tasks
+      let defaultDate = {
+        weekDay: "السبت",
+        hijriDay: 5,
+        hijriMonth: 8,
+        hijriYear: 1444,
+      };
+
       function addNewFutureRow() {
         const table = document
           .getElementById("futureTable")
           .getElementsByTagName("tbody")[0];
         const newRow = table.insertRow();
         const rowIndex = table.rows.length;
+
+        // Use the last saved date or default
+        const savedDate = JSON.parse(
+          localStorage.getItem("future_task_date") ||
+            JSON.stringify(defaultDate)
+        );
+
         newRow.innerHTML = `
-          <td>${rowIndex}</td>
-          <td class="date-cell">
-            <select class="hijri-select" name="week-day">
-              ${weekDays
-                .map((day) => `<option value="${day}">${day}</option>`)
-                .join("")}
-            </select>
-            <select class="hijri-select" name="hijri-day">
-              ${Array.from({ length: 30 }, (_, i) => i + 1)
-                .map((day) => `<option value="${day}">${day}</option>`)
-                .join("")}
-            </select>
-            <select class="hijri-select" name="hijri-month">
-              ${hijriMonths
-                .map((m, i) => `<option value="${i + 1}">${m}</option>`)
-                .join("")}
-            </select>
-            <select class="hijri-select" name="hijri-year">
-              ${Array.from({ length: 41 }, (_, i) => 1430 + i)
-                .map((year) => `<option value="${year}">${year}</option>`)
-                .join("")}
-            </select>
-          </td>
-          <td contenteditable="true">06:00</td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td>
-            <div class="action-buttons">
-              <button class="btn btn-warning btn-sm edit-btn" onclick="editFutureRow(this)">تعديل</button>
-              <button class="btn btn-danger btn-sm delete-btn" onclick="deleteFutureRow(this)">حذف</button>
-            </div>
-          </td>
-        `;
-        saveFutureTasks();
+      <td>${rowIndex}</td>
+      <td class="date-cell">
+        <select class="hijri-select" name="week-day" onchange="saveFutureTasks()">
+          ${weekDays
+            .map(
+              (day) =>
+                `<option value="${day}" ${
+                  day === savedDate.weekDay ? "selected" : ""
+                }>${day}</option>`
+            )
+            .join("")}
+        </select>
+        <select class="hijri-select" name="hijri-day" onchange="saveFutureTasks()">
+          ${Array.from({ length: 30 }, (_, i) => i + 1)
+            .map(
+              (day) =>
+                `<option value="${day}" ${
+                  day === savedDate.hijriDay ? "selected" : ""
+                }>${day}</option>`
+            )
+            .join("")}
+        </select>
+        <select class="hijri-select" name="hijri-month" onchange="saveFutureTasks()">
+          ${hijriMonths
+            .map(
+              (m, i) =>
+                `<option value="${i + 1}" ${
+                  i + 1 === savedDate.hijriMonth ? "selected" : ""
+                }>${m}</option>`
+            )
+            .join("")}
+        </select>
+        <select class="hijri-select" name="hijri-year" onchange="saveFutureTasks()">
+          ${Array.from({ length: 41 }, (_, i) => 1430 + i)
+            .map(
+              (year) =>
+                `<option value="${year}" ${
+                  year === savedDate.hijriYear ? "selected" : ""
+                }>${year}</option>`
+            )
+            .join("")}
+        </select>
+      </td>
+      <td contenteditable="true">06:00</td>
+      <td contenteditable="true"></td>
+      <td contenteditable="true"></td>
+      <td contenteditable="true"></td>
+      <td>
+        <div class="action-buttons">
+          <button class="btn btn-warning btn-sm edit-btn" onclick="editFutureRow(this)">تعديل</button>
+          <button class="btn btn-danger btn-sm delete-btn" onclick="deleteFutureRow(this)">حذف</button>
+        </div>
+      </td>
+    `;
+        saveFutureTasks(false); // Pass false to skip checkFutureTasks
       }
 
       function editFutureRow(button) {
@@ -235,113 +270,206 @@
         });
       }
 
-      function saveFutureTasks() {
+      function saveFutureTasks(checkTasks = true) {
         const table = document
           .getElementById("futureTable")
           .getElementsByTagName("tbody")[0];
         const rows = table.getElementsByTagName("tr");
         const data = [];
+        let lastDate = null;
+
         for (let row of rows) {
           const cells = row.getElementsByTagName("td");
           const weekDay = cells[1].querySelector(
             "select[name='week-day']"
           ).value;
-          const day = cells[1].querySelector("select[name='hijri-day']").value;
-          const month = cells[1].querySelector(
-            "select[name='hijri-month']"
-          ).value;
-          const year = cells[1].querySelector(
-            "select[name='hijri-year']"
-          ).value;
-          const taskData = [
-            `${weekDay} ${day} ${hijriMonths[month - 1]} ${year}`,
-            cells[2].innerText,
-            cells[3].innerText,
-            cells[4].innerText,
-            cells[5].innerText,
-            false, // isCompleted
-            false, // isPostponed
-            false, // isImportant
-            "", // importantColor
-          ];
+          const day = parseInt(
+            cells[1].querySelector("select[name='hijri-day']").value
+          );
+          const month = parseInt(
+            cells[1].querySelector("select[name='hijri-month']").value
+          );
+          const year = parseInt(
+            cells[1].querySelector("select[name='hijri-year']").value
+          );
+
+          // Save the date for the last row to use in new rows
+          lastDate = {
+            weekDay,
+            hijriDay: day,
+            hijriMonth: month,
+            hijriYear: year,
+          };
+
+          const taskData = {
+            weekDay,
+            hijriDay: day,
+            hijriMonth: month,
+            hijriYear: year,
+            startTime: cells[2].innerText.trim(),
+            taskType: cells[3].innerText.trim(),
+            location: cells[4].innerText.trim(),
+            details: cells[5].innerText.trim(),
+          };
           data.push(taskData);
         }
+
+        // Save tasks
         localStorage.setItem("future_tasks", JSON.stringify(data));
+
+        // Save the last selected date for new rows
+        if (lastDate) {
+          localStorage.setItem("future_task_date", JSON.stringify(lastDate));
+        }
+
+        // Only check tasks if explicitly allowed
+        if (checkTasks) {
+          checkFutureTasks();
+        }
       }
 
       function loadFutureTasks() {
         const table = document
           .getElementById("futureTable")
           .getElementsByTagName("tbody")[0];
-        const savedData = localStorage.getItem("future_tasks");
+        const savedData = JSON.parse(
+          localStorage.getItem("future_tasks") || "[]"
+        );
         table.innerHTML = "";
-        if (savedData) {
-          const tasks = JSON.parse(savedData);
-          tasks.forEach((rowData, index) => {
-            const [weekDay, day, monthName, year] = rowData[0].split(" ");
-            const month = hijriMonths.indexOf(monthName) + 1;
-            const row = table.insertRow();
-            row.innerHTML = `
-              <td>${index + 1}</td>
-              <td class="date-cell">
-                <select class="hijri-select" name="week-day">
-                  ${weekDays
-                    .map(
-                      (d) =>
-                        `<option value="${d}" ${
-                          d === weekDay ? "selected" : ""
-                        }>${d}</option>`
-                    )
-                    .join("")}
-                </select>
-                <select class="hijri-select" name="hijri-day">
-                  ${Array.from({ length: 30 }, (_, i) => i + 1)
-                    .map(
-                      (d) =>
-                        `<option value="${d}" ${
-                          d === parseInt(day) ? "selected" : ""
-                        }>${d}</option>`
-                    )
-                    .join("")}
-                </select>
-                <select class="hijri-select" name="hijri-month">
-                  ${hijriMonths
-                    .map(
-                      (m, i) =>
-                        `<option value="${i + 1}" ${
-                          i + 1 === month ? "selected" : ""
-                        }>${m}</option>`
-                    )
-                    .join("")}
-                </select>
-                <select class="hijri-select" name="hijri-year">
-                  ${Array.from({ length: 41 }, (_, i) => 1430 + i)
-                    .map(
-                      (y) =>
-                        `<option value="${y}" ${
-                          y === parseInt(year) ? "selected" : ""
-                        }>${y}</option>`
-                    )
-                    .join("")}
-                </select>
-              </td>
-              <td contenteditable="false">${rowData[1]}</td>
-              <td contenteditable="false">${rowData[2]}</td>
-              <td contenteditable="false">${rowData[3]}</td>
-              <td contenteditable="false">${rowData[4]}</td>
-              <td>
-                <div class="action-buttons">
-                  <button class="btn btn-warning btn-sm edit-btn" onclick="editFutureRow(this)">تعديل</button>
-                  <button class="btn btn-danger btn-sm delete-btn" onclick="deleteFutureRow(this)">حذف</button>
-                </div>
-              </td>
-            `;
-          });
+
+        savedData.forEach((taskData, index) => {
+          const row = table.insertRow();
+          row.innerHTML = `
+        <td>${index + 1}</td>
+        <td class="date-cell">
+          <select class="hijri-select" name="week-day" onchange="saveFutureTasks()">
+            ${weekDays
+              .map(
+                (d) =>
+                  `<option value="${d}" ${
+                    d === taskData.weekDay ? "selected" : ""
+                  }>${d}</option>`
+              )
+              .join("")}
+          </select>
+          <select class="hijri-select" name="hijri-day" onchange="saveFutureTasks()">
+            ${Array.from({ length: 30 }, (_, i) => i + 1)
+              .map(
+                (d) =>
+                  `<option value="${d}" ${
+                    d === taskData.hijriDay ? "selected" : ""
+                  }>${d}</option>`
+              )
+              .join("")}
+          </select>
+          <select class="hijri-select" name="hijri-month" onchange="saveFutureTasks()">
+            ${hijriMonths
+              .map(
+                (m, i) =>
+                  `<option value="${i + 1}" ${
+                    i + 1 === taskData.hijriMonth ? "selected" : ""
+                  }>${m}</option>`
+              )
+              .join("")}
+          </select>
+          <select class="hijri-select" name="hijri-year" onchange="saveFutureTasks()">
+            ${Array.from({ length: 41 }, (_, i) => 1430 + i)
+              .map(
+                (y) =>
+                  `<option value="${y}" ${
+                    y === taskData.hijriYear ? "selected" : ""
+                  }>${y}</option>`
+              )
+              .join("")}
+          </select>
+        </td>
+        <td contenteditable="false">${taskData.startTime}</td>
+        <td contenteditable="false">${taskData.taskType}</td>
+        <td contenteditable="false">${taskData.location}</td>
+        <td contenteditable="false">${taskData.details}</td>
+        <td>
+          <div class="action-buttons">
+            <button class="btn btn-warning btn-sm edit-btn" onclick="editFutureRow(this)">تعديل</button>
+            <button class="btn btn-danger btn-sm delete-btn" onclick="deleteFutureRow(this)">حذف</button>
+          </div>
+        </td>
+      `;
+        });
+      }
+
+      function checkFutureTasks() {
+        // Get the current date from mainTable1 (index.html)
+        const mainWeekDay = localStorage.getItem("weekDay") || "السبت";
+        const mainHijriDay = parseInt(localStorage.getItem("hijriDay")) || 5;
+        const mainHijriMonth =
+          parseInt(localStorage.getItem("hijriMonth")) || 8;
+        const mainHijriYear =
+          parseInt(localStorage.getItem("hijriYear")) || 1444;
+
+        // Get future tasks
+        const futureTasks = JSON.parse(
+          localStorage.getItem("future_tasks") || "[]"
+        );
+        const mainTableTasks = JSON.parse(
+          localStorage.getItem("mainTable1_tasks") || "[]"
+        );
+        let tasksMoved = false;
+
+        // Filter future tasks and move matching ones
+        const updatedFutureTasks = futureTasks.filter((task) => {
+          if (!task) return true; // Skip invalid tasks
+
+          const taskWeekDay = task.weekDay;
+          const taskDay = task.hijriDay;
+          const taskMonth = task.hijriMonth;
+          const taskYear = task.hijriYear;
+
+          // Check if the task's date matches mainTable1's date
+          if (
+            taskYear === mainHijriYear &&
+            taskMonth === mainHijriMonth &&
+            taskDay === mainHijriDay &&
+            taskWeekDay === mainWeekDay
+          ) {
+            // Format the task for mainTable1
+            const mainTableTask = [
+              `${taskWeekDay} ${taskDay} ${
+                hijriMonths[taskMonth - 1]
+              } ${taskYear}`,
+              task.startTime,
+              task.taskType,
+              task.location,
+              task.details,
+              false, // isCompleted
+              false, // reserved
+              false, // isImportant
+              "", // importantColor
+            ];
+            mainTableTasks.push(mainTableTask);
+            tasksMoved = true;
+            return false; // Remove from futureTasks
+          }
+          return true; // Keep in futureTasks
+        });
+
+        // Update localStorage if any tasks were moved
+        if (tasksMoved) {
+          localStorage.setItem(
+            "mainTable1_tasks",
+            JSON.stringify(mainTableTasks)
+          );
+          localStorage.setItem(
+            "future_tasks",
+            JSON.stringify(updatedFutureTasks)
+          );
+          // Reload the future tasks table to reflect changes
+          loadFutureTasks();
         }
       }
 
       document.addEventListener("DOMContentLoaded", () => {
         loadFutureTasks();
+        checkFutureTasks(); // Check for tasks to move on page load
       });
     </script>
   </body>
