--- a/pending_tasks.html
+++ b/pending_tasks.html
@@ -12,190 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      html,
-      body {
-        height: 100%;
-        width: 100%;
-        font-family: "Tajawal", sans-serif;
-        background-color: #f0f4f8;
-        direction: rtl;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        padding: 15px;
-        max-width: 1200px;
-        margin: 0 auto;
-        text-align: right;
-      }
-      h2 {
-        color: #2c3e50;
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      .table {
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        margin-bottom: 15px;
-      }
-      .table th,
-      .table td {
-        text-align: center;
-        vertical-align: middle;
-        padding: 6px;
-      }
-      .table td {
-        font-size: 10px;
-        font-weight: bold;
-      }
-      .table th:nth-child(1),
-      .table td:nth-child(1) {
-        width: 5%;
-      }
-      .table th:nth-child(2),
-      .table td:nth-child(2) {
-        width: 15%;
-      }
-      .table th:nth-child(3),
-      .table td:nth-child(3) {
-        width: 10%;
-      }
-      .table th:nth-child(4),
-      .table td:nth-child(4) {
-        width: 20%;
-      }
-      .table th:nth-child(5),
-      .table td:nth-child(5) {
-        width: 20%;
-      }
-      .table th:nth-child(6),
-      .table td:nth-child(6) {
-        width: 25%;
-      }
-      .table th:nth-child(7),
-      .table td:nth-child(7) {
-        width: 15%;
-      }
-      .hijri-select {
-        width: 45px !important;
-        font-size: 9px;
-        padding: 2px;
-      }
-      .action-buttons {
-        display: flex;
-        justify-content: center;
-        gap: 5px;
-        flex-wrap: nowrap;
-      }
-      .edit-btn,
-      .important-btn,
-      .move-btn,
-      .delete-btn {
-        margin: 2px;
-        padding: 4px 8px;
-        font-size: 12px;
-        white-space: nowrap;
-        min-width: 50px;
-      }
-      .important-task-dark-red {
-        background-color: #ff9999 !important;
-      }
-      .important-task-dark-purple {
-        background-color: #e6ccff !important;
-      }
-      .important-task-dark-green {
-        background-color: #99cc99 !important;
-      }
-      .important-task-dark-blue {
-        background-color: #99ccff !important;
-      }
-      .important-task-dark-brown {
-        background-color: #d9b38c !important;
-      }
-      .important-task-deep-red {
-        background-color: #e57373 !important;
-      }
-      .important-task-deep-blue {
-        background-color: #64b5f6 !important;
-      }
-      .important-task-deep-green {
-        background-color: #81c784 !important;
-      }
-      .important-task-deep-orange {
-        background-color: #ffb74d !important;
-      }
-      .important-task-deep-purple {
-        background-color: #ba68c8 !important;
-      }
-      .add-task-btn {
-        margin: 10px 0;
-      }
-      @media print {
-        .action-buttons,
-        button {
-          display: none !important;
-        }
-        .hijri-select {
-          display: none !important;
-        }
-        .print-date {
-          display: inline !important;
-          font-size: 8pt;
-        }
-        .table {
-          font-size: 7pt;
-          border-collapse: collapse;
-          width: 100%;
-        }
-        .table th,
-        .table td {
-          padding: 2mm;
-          border: 1px solid #000;
-        }
-      }
-      @media (max-width: 430px) {
-        .table {
-          font-size: 7px;
-          min-width: 600px;
-        }
-        .table-responsive {
-          overflow-x: auto;
-        }
-        .table td:nth-child(4),
-        .table td:nth-child(5),
-        .table td:nth-child(6) {
-          font-size: 12px;
-        }
-        .edit-btn,
-        .important-btn,
-        .move-btn,
-        .delete-btn {
-          padding: 2px 4px;
-          font-size: 9px;
-          min-width: 45px;
-        }
-        .container {
-          padding: 5px;
-        }
-        .action-buttons {
-          flex-direction: column;
-          gap: 2px;
-          align-items: center;
-        }
-        .hijri-select {
-          width: 35px !important;
-          font-size: 7px;
-        }
-        .table th,
-        .table td {
-          padding: 3px;
-          white-space: normal;
-          line-height: 1.2;
-        }
-      }
-    </style>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
@@ -233,384 +51,7 @@
         >
       </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const hijriMonths = [
-        "محرم",
-        "صفر",
-        "ربيع أول",
-        "ربيع ثاني",
-        "جمادى أول",
-        "جمادى ثاني",
-        "رجب",
-        "شعبان",
-        "رمضان",
-        "شوال",
-        "ذو القعدة",
-        "ذو الحجة",
-      ];
-      const weekDays = [
-        "السبت",
-        "الأحد",
-        "الإثنين",
-        "الثلاثاء",
-        "الأربعاء",
-        "الخميس",
-        "الجمعة",
-      ];
-      const importantColors = [
-        "important-task-dark-red",
-        "important-task-dark-purple",
-        "important-task-dark-green",
-        "important-task-dark-blue",
-        "important-task-dark-brown",
-        "important-task-deep-red",
-        "important-task-deep-blue",
-        "important-task-deep-green",
-        "important-task-deep-orange",
-        "important-task-deep-purple",
-      ];
-
-      function loadPendingTasks() {
-        const table = document
-          .getElementById("pendingTable")
-          .getElementsByTagName("tbody")[0];
-        const pendingTasks = JSON.parse(
-          localStorage.getItem("pending_tasks") || "[]"
-        );
-        table.innerHTML = "";
-        pendingTasks.forEach((task, index) => {
-          const [weekDay, day, monthName, year] = task[0].split(" ");
-          const month = hijriMonths.indexOf(monthName) + 1;
-          const isImportant = task[7] || false;
-          const importantColor = task[7] ? task[8] : "";
-          const dateText = `${weekDay} ${day} ${
-            hijriMonths[month - 1]
-          }، ${year} هـ`;
-          const row = table.insertRow();
-          if (isImportant && importantColor) row.classList.add(importantColor);
-          row.innerHTML = `
-            <td>${index + 1}</td>
-            <td class="date-cell">
-              <select class="hijri-select" name="week-day">${weekDays
-                .map(
-                  (d) =>
-                    `<option value="${d}" ${
-                      d === weekDay ? "selected" : ""
-                    }>${d}</option>`
-                )
-                .join("")}</select>
-              <select class="hijri-select" name="hijri-day">${Array.from(
-                { length: 30 },
-                (_, i) => i + 1
-              )
-                .map(
-                  (d) =>
-                    `<option value="${d}" ${
-                      d === parseInt(day) ? "selected" : ""
-                    }>${d}</option>`
-                )
-                .join("")}</select>
-              <select class="hijri-select" name="hijri-month">${hijriMonths
-                .map(
-                  (m, i) =>
-                    `<option value="${i + 1}" ${
-                      i + 1 === month ? "selected" : ""
-                    }>${m}</option>`
-                )
-                .join("")}</select>
-              <select class="hijri-select" name="hijri-year">${Array.from(
-                { length: 41 },
-                (_, i) => 1430 + i
-              )
-                .map(
-                  (y) =>
-                    `<option value="${y}" ${
-                      y === parseInt(year) ? "selected" : ""
-                    }>${y}</option>`
-                )
-                .join("")}</select>
-              <span class="print-date">${dateText}</span>
-            </td>
-            <td contenteditable="true">${task[1]}</td>
-            <td contenteditable="true">${task[2]}</td>
-            <td contenteditable="true">${task[3]}</td>
-            <td contenteditable="true">${task[4]}</td>
-            <td class="edit-column">
-              <div class="action-buttons">
-                <button class="btn btn-warning btn-sm edit-btn" onclick="editPendingRow(${index})">تعديل</button>
-                <button class="btn btn-danger btn-sm important-btn" onclick="showColorPicker(this, ${index})">${
-            isImportant ? "إلغاء الأهمية" : "تحديد اللون"
-          }</button>
-                <button class="btn btn-primary btn-sm move-btn" onclick="moveToMainTable(${index})">نقل إلى الجدول الأول</button>
-                <button class="btn btn-danger btn-sm delete-btn" onclick="deletePendingTask(${index})">حذف</button>
-              </div>
-            </td>
-          `;
-        });
-      }
-
-      function addNewPendingTask() {
-        const table = document
-          .getElementById("pendingTable")
-          .getElementsByTagName("tbody")[0];
-        const rowIndex = table.rows.length + 1;
-        const today = new Date();
-        const defaultWeekDay = weekDays[today.getDay()];
-        const defaultDay = today.getDate();
-        const defaultMonth = 8; // شعبان كافتراضي
-        const defaultYear = 1444;
-        const dateText = `${defaultWeekDay} ${defaultDay} ${
-          hijriMonths[defaultMonth - 1]
-        }، ${defaultYear} هـ`;
-        const row = table.insertRow();
-        row.innerHTML = `
-          <td>${rowIndex}</td>
-          <td class="date-cell">
-            <select class="hijri-select" name="week-day">${weekDays
-              .map(
-                (d) =>
-                  `<option value="${d}" ${
-                    d === defaultWeekDay ? "selected" : ""
-                  }>${d}</option>`
-              )
-              .join("")}</select>
-            <select class="hijri-select" name="hijri-day">${Array.from(
-              { length: 30 },
-              (_, i) => i + 1
-            )
-              .map(
-                (d) =>
-                  `<option value="${d}" ${
-                    d === defaultDay ? "selected" : ""
-                  }>${d}</option>`
-              )
-              .join("")}</select>
-            <select class="hijri-select" name="hijri-month">${hijriMonths
-              .map(
-                (m, i) =>
-                  `<option value="${i + 1}" ${
-                    i + 1 === defaultMonth ? "selected" : ""
-                  }>${m}</option>`
-              )
-              .join("")}</select>
-            <select class="hijri-select" name="hijri-year">${Array.from(
-              { length: 41 },
-              (_, i) => 1430 + i
-            )
-              .map(
-                (y) =>
-                  `<option value="${y}" ${
-                    y === defaultYear ? "selected" : ""
-                  }>${y}</option>`
-              )
-              .join("")}</select>
-            <span class="print-date">${dateText}</span>
-          </td>
-          <td contenteditable="true">06:00</td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td class="edit-column">
-            <div class="action-buttons">
-              <button class="btn btn-warning btn-sm edit-btn" onclick="editPendingRow(${
-                table.rows.length - 1
-              })">تعديل</button>
-              <button class="btn btn-danger btn-sm important-btn" onclick="showColorPicker(this, ${
-                table.rows.length - 1
-              })">تحديد اللون</button>
-              <button class="btn btn-primary btn-sm move-btn" onclick="moveToMainTable(${
-                table.rows.length - 1
-              })">نقل إلى الجدول الأول</button>
-              <button class="btn btn-danger btn-sm delete-btn" onclick="deletePendingTask(${
-                table.rows.length - 1
-              })">حذف</button>
-            </div>
-          </td>
-        `;
-        savePendingTasks();
-      }
-
-      function editPendingRow(index) {
-        const table = document
-          .getElementById("pendingTable")
-          .getElementsByTagName("tbody")[0];
-        const row = table.rows[index];
-        const cells = row.getElementsByTagName("td");
-        const editButton = row.querySelector(".edit-btn");
-        if (editButton.innerText === "تعديل") {
-          cells[2].contentEditable = "true";
-          cells[3].contentEditable = "true";
-          cells[4].contentEditable = "true";
-          cells[5].contentEditable = "true";
-          editButton.innerText = "حفظ";
-          editButton.className = "btn btn-success btn-sm edit-btn";
-        } else {
-          savePendingRow(index);
-        }
-      }
-
-      function savePendingRow(index) {
-        const table = document
-          .getElementById("pendingTable")
-          .getElementsByTagName("tbody")[0];
-        const row = table.rows[index];
-        const cells = row.getElementsByTagName("td");
-        const weekDay = cells[1].querySelector("select[name='week-day']").value;
-        const day = cells[1].querySelector("select[name='hijri-day']").value;
-        const month = cells[1].querySelector(
-          "select[name='hijri-month']"
-        ).value;
-        const year = cells[1].querySelector("select[name='hijri-year']").value;
-        const dateText = `${weekDay} ${day} ${
-          hijriMonths[month - 1]
-        }، ${year} هـ`;
-        cells[1].querySelector(".print-date").innerText = dateText;
-        const pendingTasks = JSON.parse(
-          localStorage.getItem("pending_tasks") || "[]"
-        );
-        pendingTasks[index] = [
-          `${weekDay} ${day} ${hijriMonths[month - 1]} ${year}`,
-          cells[2].innerText,
-          cells[3].innerText,
-          cells[4].innerText,
-          cells[5].innerText,
-          false,
-          false,
-          pendingTasks[index]?.[7] || false,
-          pendingTasks[index]?.[8] || "",
-        ];
-        localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
-        cells[2].contentEditable = "false";
-        cells[3].contentEditable = "false";
-        cells[4].contentEditable = "false";
-        cells[5].contentEditable = "false";
-        const editButton = row.querySelector(".edit-btn");
-        editButton.innerText = "تعديل";
-        editButton.className = "btn btn-warning btn-sm edit-btn";
-      }
-
-      function savePendingTasks() {
-        const table = document
-          .getElementById("pendingTable")
-          .getElementsByTagName("tbody")[0];
-        const rows = table.getElementsByTagName("tr");
-        const pendingTasks = [];
-        for (let row of rows) {
-          const cells = row.getElementsByTagName("td");
-          const weekDay = cells[1].querySelector(
-            "select[name='week-day']"
-          ).value;
-          const day = cells[1].querySelector("select[name='hijri-day']").value;
-          const month = cells[1].querySelector(
-            "select[name='hijri-month']"
-          ).value;
-          const year = cells[1].querySelector(
-            "select[name='hijri-year']"
-          ).value;
-          const dateText = `${weekDay} ${day} ${
-            hijriMonths[month - 1]
-          }، ${year} هـ`;
-          cells[1].querySelector(".print-date").innerText = dateText;
-          const isImportant = importantColors.some((color) =>
-            row.classList.contains(color)
-          );
-          const importantColor =
-            importantColors.find((color) => row.classList.contains(color)) ||
-            "";
-          pendingTasks.push([
-            `${weekDay} ${day} ${hijriMonths[month - 1]} ${year}`,
-            cells[2].innerText,
-            cells[3].innerText,
-            cells[4].innerText,
-            cells[5].innerText,
-            false,
-            false,
-            isImportant,
-            importantColor,
-          ]);
-        }
-        localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
-      }
-
-      function showColorPicker(button, index) {
-        const row = button.closest("tr");
-        const actionButtons = row.querySelector(".action-buttons");
-        const existingPicker = row.querySelector(".color-picker");
-        if (existingPicker) {
-          existingPicker.remove();
-          return;
-        }
-        const colorNames = [
-          "أحمر داكن",
-          "أرجواني فاتح",
-          "أخضر داكن",
-          "أزرق داكن",
-          "بني فاتح",
-          "أحمر غامق",
-          "أزرق غامق",
-          "أخضر غامق",
-          "برتقالي غامق",
-          "بنفسجي غامق",
-        ];
-        const colorPicker = document.createElement("div");
-        colorPicker.className = "color-picker";
-        colorPicker.innerHTML = `<select class="color-select" onchange="applyColor(this, ${index})"><option value="" disabled selected>اختر لونًا</option>${importantColors
-          .map(
-            (color, i) => `<option value="${color}">${colorNames[i]}</option>`
-          )
-          .join("")}</select>`;
-        actionButtons.appendChild(colorPicker);
-      }
-
-      function applyColor(select, index) {
-        const row = select.closest("tr");
-        const color = select.value;
-        const button = row.querySelector(".important-btn");
-        const dataCells = Array.from(row.querySelectorAll("td")).slice(1, -1);
-        if (color) {
-          dataCells.forEach((cell) => {
-            importantColors.forEach((c) => cell.classList.remove(c));
-            cell.classList.add(color);
-          });
-          button.innerText = "إلغاء الأهمية";
-        }
-        select.parentElement.remove();
-        savePendingTasks();
-      }
-
-      function moveToMainTable(index) {
-        const pendingTasks = JSON.parse(
-          localStorage.getItem("pending_tasks") || "[]"
-        );
-        const task = pendingTasks.splice(index, 1)[0];
-        const mainTableTasks = JSON.parse(
-          localStorage.getItem("mainTable1_tasks") || "[]"
-        );
-        mainTableTasks.push(task);
-        localStorage.setItem(
-          "mainTable1_tasks",
-          JSON.stringify(mainTableTasks)
-        );
-        localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
-        loadPendingTasks();
-        alert("تم نقل المهمة إلى الجدول الأول بنجاح!");
-      }
-
-      function deletePendingTask(index) {
-        const pendingTasks = JSON.parse(
-          localStorage.getItem("pending_tasks") || "[]"
-        );
-        pendingTasks.splice(index, 1); // حذف المهمة من المصفوفة
-        localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
-        loadPendingTasks(); // إعادة تحميل الجدول بعد الحذف
-        alert("تم حذف المهمة بنجاح!");
-      }
-
-      document.addEventListener("DOMContentLoaded", function () {
-        loadPendingTasks();
-      });
-    </script>
+    <script src="scripts.js"></script>
   </body>
 </html>
