Refactor table styles for completed tasks and ensure consistent background color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           >
             <option value="السبت" selected>السبت</option>
             <option value="الأحد">الأحد</option>
-            <option value="الإثنين">الإثنين</option>
+            <option valuing="الإثنين">الإثنين</option>
             <option value="الثلاثاء">الثلاثاء</option>
             <option value="الأربعاء">الأربعاء</option>
             <option value="الخميس">الخميس</option>
@@ -254,7 +254,7 @@
           </h4>
           <div class="table-responsive table-section">
             <table
-              class="table table-bordered table-striped text-center align-middle"
+              class="table table-bordered text-center align-middle"
               id="completedTable"
             >
               <thead class="table-dark">
