--- a/second.html
+++ b/second.html
@@ -68,7 +68,7 @@
       </div>
       <div class="table-responsive table-section">
         <table
-          class="table table-bordered table-striped text-center align-middle"
+          class="table table-bordered text-center align-middle"
           id="completedTable"
         >
           <thead class="table-dark">
